--- a/chess_BE/package.json
+++ b/chess_BE/package.json
@@ -21,7 +21,9 @@
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
+    "@nestjs/config": "^3.0.1",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/jwt": "^10.1.1",
     "@nestjs/platform-express": "^10.0.0",
     "firebase-admin": "^11.10.1",
     "reflect-metadata": "^0.1.13",
