--- a/chess_BE/package.json
+++ b/chess_BE/package.json
@@ -25,7 +25,9 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/jwt": "^10.1.1",
     "@nestjs/platform-express": "^10.0.0",
+    "@prisma/client": "^5.9.1",
     "firebase-admin": "^11.10.1",
+    "prisma": "^5.9.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
   },
