--- a/chess_FE/package.json
+++ b/chess_FE/package.json
@@ -16,6 +16,7 @@
     "@types/react-dom": "^18.2.7",
     "axios": "^1.5.0",
     "react": "^18.2.0",
+    "react-chessboard": "^4.5.0",
     "react-dom": "^18.2.0",
     "react-pro-sidebar": "^1.1.0-alpha.1",
     "react-router-dom": "^6.19.0",
