--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,7 @@ services:
     container_name: database
     image: postgres:16
     environment:
+      POSTGRES_DB: "ROOK"
       POSTGRES_USER: rook_user
       POSTGRES_PASSWORD: rook_pass
       PGDATA: /data/postgres
