--- a/chess_BE/package.json
+++ b/chess_BE/package.json
@@ -23,11 +23,14 @@
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.0.1",
     "@nestjs/core": "^10.0.0",
-    "@nestjs/jwt": "^10.1.1",
+    "@nestjs/jwt": "^10.2.0",
+    "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.0",
     "@prisma/client": "^5.9.1",
     "firebase": "^10.11.0",
     "firebase-admin": "^11.10.1",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
     "prisma": "^5.9.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
