--- a/chess_BE/package.json
+++ b/chess_BE/package.json
@@ -20,12 +20,14 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@nestjs/common": "^10.0.0",
+    "@nestjs/common": "^10.3.9",
     "@nestjs/config": "^3.0.1",
-    "@nestjs/core": "^10.0.0",
+    "@nestjs/core": "^10.3.9",
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/passport": "^10.0.3",
-    "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/platform-express": "^10.3.9",
+    "@nestjs/platform-socket.io": "^10.3.9",
+    "@nestjs/websockets": "^10.3.9",
     "@prisma/client": "^5.9.1",
     "firebase": "^10.11.0",
     "firebase-admin": "^11.10.1",
@@ -33,7 +35,8 @@
     "passport-jwt": "^4.0.1",
     "prisma": "^5.9.1",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "socket.io": "^4.7.5"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
