--- a/chess_FE/package.json
+++ b/chess_FE/package.json
@@ -15,6 +15,7 @@
     "@types/react": "^18.2.18",
     "@types/react-dom": "^18.2.7",
     "axios": "^1.5.0",
+    "mobx": "^6.12.3",
     "mobx-react-lite": "^4.0.7",
     "react": "^18.2.0",
     "react-chessboard": "^4.5.0",
