--- a/chess_FE/package.json
+++ b/chess_FE/package.json
@@ -23,6 +23,7 @@
     "react-pro-sidebar": "^1.1.0-alpha.1",
     "react-router-dom": "^6.19.0",
     "react-scripts": "5.0.1",
+    "socket.io-client": "^4.7.5",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
